@@ -1,3 +1,7 @@
+2008-07-09: Paul Varner <fuzzyray@gentoo.org>
+	* gentoolkit: Fix gentoolkit to work without thread support in 
+	python. (Bug 223255)
+
 2008-06-16: Marius Mauch <genone@gentoo.org>
 	* euse: Add support for multi-parent profiles, account for missing 
 	final newline in make.conf
